[package]
name = "query"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
anyhow = "1.0"
http = "1.0"
serde_json = "1.0"
wit-bindgen = "0.42.1"

[dependencies.hyperware_process_lib]
git = "https://github.com/hyperware-ai/process_lib"
rev = "e8b065179ce5d15893a23142416e59c87e0f31f6"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[package.metadata.component]
package = "hyperware:process"
